--- a/src/App.css
+++ b/src/App.css
@@ -102,11 +102,12 @@ body {
 
 .firmSection {
     width: 100%;
+    height: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 15px;
+    margin-top: 120px;
 }
 
 .tableForm {
